JETcompiler/Tests/bad/bad015.myout
Error while processing expression: invalid argument type for function "printInt". Expecting "IntegerType" and instead "FloatType" was provided, line 4.
